# graph-rag-tutorials

./: README.md  graph_examples.ipynb  hello.py  pyproject.toml  requirements.txt
notebook/chromadb/: chroma.sqlite3
paper/: settings.yaml
paper/cache/community_reporting/: chat_create_community_report_0f3a99381ad157cb7a86f44d12d9c309a185482ae132d5367cc3f354b4130a37_v3  chat_create_community_report_116f387911f5288710d2bbf5d8a56d27a27dbd77314b216bc1d46ebaadd809d6_v3  chat_create_community_report_118b8b6fafad3908b6f4313759341a3355211bda8f86591778ce9e30580d5276_v3  chat_create_community_report_12d6c7b61d45c79d82483a82bdf3f79d044f5f6018545951102de9ed0a015b77_v3  chat_create_community_report_1425a138ae2d9035bf9e1c92b0f1bf2b2f70cb8a5607f5f1115eae7f544218ed_v3  chat_create_community_report_17cec438e5577ece7fd02a6359e6477f45d619da3de744aa7e84ae4373f5a248_v3  chat_create_community_report_186ea39549698d1b41ce0411ab608a5f7af2364dd4e93ccedbba1aceb7a2864e_v3  chat_create_community_report_18d913916fadb89070fc8364e2c7bffe5f256d63d85dc88df77822b1eeb7b5c6_v3  chat_create_community_report_18ef1b7e14c561c1b4e2ac97e805ef0ef496cfb3b4f13130282dba9be8422917_v3  chat_create_community_report_1ab3efa6a09fb3d66481c17be38165fddf1eb7c599c56c092aa14bcb38cf62ea_v3  chat_create_community_report_216aff16b51a5d9ee68a7aec44540040630dad000019943ce2d29a7732304466_v3  (+69 more)
paper/input/: 2408.13296v3.txt
paper/output/: communities.parquet  community_reports.parquet  documents.parquet  entities.parquet  relationships.parquet  stats.json  text_units.parquet
(+256 files in other folders)
