[project]
name = "graphrag-breakdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.3.7",
    "json-repair>=0.54.2",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.0",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.3",
    "langchain-text-splitters>=1.0.0",
    "neo4j>=6.0.3",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "yfiles-jupyter-graphs>=1.10.9",
]
